# cow-rs

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Cross.toml  Makefile  README.md  cliff.toml  clippy.toml  codecov.yml  deny.toml  dprint.json  release.toml  rustfmt.toml  typos.toml
crates/app-data/: Cargo.toml
crates/app-data/specs/app-data/: v1.6.0.json
crates/app-data/src/: cid.rs  hash.rs  ipfs.rs  lib.rs  schema.rs  types.rs  validation.rs
crates/bridging/: Cargo.toml
crates/bridging/src/: across.rs  bungee.rs  lib.rs  provider.rs  sdk.rs  signing_step_manager.rs  swap_quoter.rs  types.rs  utils.rs
crates/bridging/src/near_intents/: api.rs  const.rs  mod.rs  provider.rs  types.rs  util.rs
crates/bridging/tests/: near_intents_api.rs  near_intents_attestation_conformance.rs  near_intents_provider.rs
crates/browser-wallet/: Cargo.toml
crates/browser-wallet/src/: lib.rs  wallet.rs  wasm.rs
crates/chains/: Cargo.toml
crates/chains/src/: chain.rs  chains.rs  contracts.rs  lib.rs  params.rs  tokens.rs
crates/chains/tests/: ts_conformance.rs
crates/composable/: Cargo.toml
crates/composable/src/: calldata.rs  factory.rs  gat.rs  lib.rs  multiplexer.rs  stop_loss.rs  twap.rs  types.rs  utils.rs
crates/contracts-abi/: Cargo.toml
crates/contracts-abi/src/: lib.rs
crates/cow-rs/: Cargo.toml  build.rs
crates/cow-rs/specs/: orderbook-api.yml  subgraph.graphql
crates/cow-rs/specs/app-data/: v1.0.0.json  v1.10.0.json  v1.13.0.json  v1.14.0.json
crates/cow-rs/src/: browser_wallet.rs  cross_chain_post.rs  erc20.rs  error.rs  ethflow.rs  lib.rs  trading_swap_quoter.rs  traits.rs  types.rs  wasm.rs
crates/cow-rs/src/app_data/: cid.rs  hash.rs  ipfs.rs  mod.rs  schema.rs  schema_validation.rs  types.rs  validation.rs
crates/cow-rs/src/bridging/: across.rs  bungee.rs  mod.rs  provider.rs  sdk.rs  types.rs  utils.rs
crates/cow-rs/src/common/: adapter.rs  address.rs  contracts.rs  crypto.rs  logging.rs  mod.rs  serialize.rs
crates/cow-rs/src/composable/: calldata.rs  factory.rs  gat.rs  mod.rs  multiplexer.rs  stop_loss.rs  twap.rs  types.rs  utils.rs
crates/cow-rs/src/config/: chain.rs  chains.rs  contracts.rs  mod.rs  params.rs  tokens.rs
crates/cow-rs/src/cow_shed/: mod.rs  sdk.rs  types.rs
crates/cow-rs/src/flash_loans/: mod.rs  sdk.rs  types.rs
crates/cow-rs/src/onchain/: erc20.rs  mod.rs  permit.rs
crates/cow-rs/src/order_book/: api.rs  generated.rs  mod.rs  quote_amounts.rs  rate_limit.rs  types.rs
crates/cow-rs/src/order_signing/: calldata.rs  eip712.rs  flags.rs  interaction.rs  mod.rs  trade.rs  types.rs  utils.rs
crates/cow-rs/src/permit/: eip2612.rs  mod.rs  types.rs
crates/cow-rs/src/settlement/: encoder.rs  mod.rs  reader.rs  refunds.rs  simulator.rs  vault.rs
crates/cow-rs/src/subgraph/: api.rs  mod.rs  queries.rs  schema_validation.rs  types.rs
crates/cow-rs/src/trading/: costs.rs  mod.rs  sdk.rs  slippage.rs  types.rs
crates/cow-rs/src/weiroll/: mod.rs  planner.rs  types.rs
crates/cow-rs/tests/: api_mock.rs  appdata.rs  bridging.rs  bridging_mock.rs  composable.rs  config.rs  conformance.rs  cow_shed.rs  cross_chain_post.rs  erc20_calldata.rs  ethflow.rs  flash_loans.rs  ipfs_mock.rs  near_receiver_branch.rs  onchain_mock.rs  permit_tests.rs  properties.rs  signing.rs  simulator_mock.rs  slippage.rs  subgraph_mock.rs  trading_mock.rs  trading_swap_quoter.rs  twap.rs  types_tests.rs  weiroll.rs
crates/cow-shed/: Cargo.toml
crates/cow-shed/src/: eip712.rs  lib.rs  sdk.rs  types.rs
crates/erc20/: Cargo.toml
crates/erc20/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/flash-loans/: Cargo.toml
crates/flash-loans/src/: lib.rs  sdk.rs  types.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs  rate_limit.rs
crates/ipfs/: Cargo.toml
crates/ipfs/src/: lib.rs
crates/onchain/: Cargo.toml
crates/onchain/src/: erc20.rs  lib.rs  permit.rs
crates/permit/: Cargo.toml
crates/permit/src/: eip2612.rs  lib.rs  types.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: encoder.rs  lib.rs  refunds.rs  simulator.rs  vault.rs
crates/signing/: Cargo.toml
crates/signing/src/: calldata.rs  eip712.rs  flags.rs  interaction.rs  lib.rs  signer_trait.rs  trade.rs  types.rs  utils.rs
crates/subgraph/: Cargo.toml
crates/subgraph/src/: api.rs  lib.rs  queries.rs  schema_validation.rs  types.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/trading/: Cargo.toml
crates/trading/src/: costs.rs  lib.rs  sdk.rs  slippage.rs  types.rs
crates/trading/tests/: sdk_mock.rs
crates/types/: Cargo.toml
crates/types/src/: flags.rs  lib.rs  trade.rs  unsigned_order.rs
crates/weiroll/: Cargo.toml
crates/weiroll/src/: lib.rs  planner.rs  types.rs
examples/native/: Cargo.toml
examples/native/examples/: app_data.rs  cancel_order.rs  chain_config.rs  composable_twap.rs  get_quote.rs  limit_order.rs  onchain_reader.rs  order_signing.rs  order_status.rs  subgraph_query.rs  swap_order.rs
examples/native/examples/app_data/: metadata.rs
examples/native/examples/bridging/: bridge_to_btc_via_near.rs  bridge_to_sol_via_near.rs  cross_chain_post.rs  cross_chain_quote.rs
examples/native/examples/composable/: stop_loss.rs  twap.rs
examples/native/examples/config/: chain.rs
examples/native/examples/cow_shed/: bundled_calls.rs
examples/wasm/: Cargo.toml  README.md  index.html
examples/wasm/bridging-console/: Cargo.toml  README.md  index.html
examples/wasm/browser-wallet-console/: Cargo.toml  README.md  index.html
examples/wasm/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: example_fuzz.rs  fuzz_address.rs  fuzz_appdata.rs  fuzz_bungee.rs  fuzz_cid.rs  fuzz_composable.rs  fuzz_eip712.rs  fuzz_encoding.rs  fuzz_flags.rs  fuzz_multiplexer.rs  fuzz_permit.rs  fuzz_serialize.rs  fuzz_trade.rs  fuzz_weiroll.rs
(+57 files in other folders)
