[workspace]
members = ["crates/*", "examples/native"]
default-members = ["crates/cow-rs"]
exclude = ["examples/wasm", "fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["CoW Protocol Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/deltartificial/cow-rs"
repository = "https://github.com/deltartificial/cow-rs"
exclude = [".github/"]

# ============================================================================
# LINTS
# ============================================================================

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2024_incompatible_pat = "warn"
unnameable_types = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unexpected_cfgs = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
# Lint groups (applied first with priority)
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Nursery lints enabled
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# Additional quality and safety lints
await_holding_lock = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
option_option = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
single_match_else = "warn"
verbose_file_reads = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
str_to_string = "warn"
rc_buffer = "warn"

# TIER 1: Critical enforcement (restriction group)
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
unimplemented = "warn"
clone_on_ref_ptr = "warn"
missing_assert_message = "warn"
allow_attributes_without_reason = "warn"

# TIER 2: Best practices (restriction + pedantic)
wildcard_enum_match_arm = "warn"
map_err_ignore = "warn"
let_underscore_must_use = "warn"
tests_outside_test_module = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
empty_drop = "warn"
deref_by_slicing = "warn"
create_dir = "warn"
checked_conversions = "warn"
default_trait_access = "warn"

# Explicitly allowed (too many false positives)
len_without_is_empty = "allow"
new_ret_no_self = "allow"
wrong_self_convention = "allow"
result_large_err = "allow"
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"
octal_escapes = "allow"
literal_string_with_formatting_args = "allow"
# unwrap_or is banned via disallowed-methods; suppress the lints that suggest using it
manual_unwrap_or = "allow"
unnecessary_map_or = "allow"
unnecessary_lazy_evaluations = "allow"

# ============================================================================
# WORKSPACE DEPENDENCIES
# ============================================================================

[workspace.dependencies]
# External
alloy-primitives = { version = "1", features = ["serde"] }
alloy-signer = "1"
alloy-signer-local = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Internal crate
cow-rs = { path = "crates/cow-rs", version = "0.1.0" }
foldhash = { version = "0.2", features = ["std"] }
futures = "0.3"
getrandom = { version = "0.2", default-features = false }
graphql-parser = "0.4"
jsonschema = { version = "0.28", default-features = false, features = ["resolve-file"] }
openapiv3 = "2.2"
prettyplease = "0.2"
progenitor-client = "0.13"
progenitor-impl = "0.13"
proptest = "1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
rust_decimal = { version = "1", features = ["maths", "serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.100"
serde_yaml = "0.9"
# syn ≥1.0.67 needed for parse_quote_spanned (wasm-bindgen transitive)
syn = { version = "1.0.67", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros"] }
tracing = "0.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
wiremock = { version = "0.6", default-features = false }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ============================================================================
# BUILD PROFILES
# ============================================================================

# Fast dev builds with minimal debug info
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Optimize heavy dependencies even in dev builds
# (Cargo silently ignores crates not in the dependency graph)
[profile.dev.package]
serde_json.opt-level = 3
serde.opt-level = 3
clap.opt-level = 3
clap_builder.opt-level = 3
clap_lex.opt-level = 3
sha2.opt-level = 3
sha3.opt-level = 3
proptest.opt-level = 3
rand.opt-level = 3
rand_chacha.opt-level = 3
rayon.opt-level = 3
rayon-core.opt-level = 3
regex.opt-level = 3
regex-syntax.opt-level = 3
regex-automata.opt-level = 3
hashbrown.opt-level = 3
foldhash.opt-level = 3

# Integration tests: optimized but with debug assertions
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

# Release: optimized, stripped, unwind for graceful error handling
[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "debuginfo"
panic = "unwind"
codegen-units = 16

# Release: optimize cold crates for size
# (Cargo silently ignores crates not in the dependency graph)
[profile.release.package]
syn.opt-level = "s"
prettyplease.opt-level = "s"
reqwest.opt-level = "s"
hyper.opt-level = "s"
hyper-util.opt-level = "s"
rustls.opt-level = "s"
tower.opt-level = "s"
tower-http.opt-level = "s"
clap_builder.opt-level = "s"
clap_complete.opt-level = "s"
toml_edit.opt-level = "s"
toml.opt-level = "s"

# Profiling: release with debug symbols
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Bench: inherits profiling
[profile.bench]
inherits = "profiling"

# Max perf: most aggressive (distribution, final binary)
[profile.maxperf]
inherits = "release"
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1
