[package]
name = "cow-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# [dependencies.cow-rs]
# path = "../crates/cow-rs"

[[bin]]
name = "example_fuzz"
path = "fuzz_targets/example_fuzz.rs"
test = false
doc = false
bench = false
