[package]
name = "cow-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cow-rs]
path = "../crates/cow-rs"
features = ["schema-validation"]

[[bin]]
name = "fuzz_cid"
path = "fuzz_targets/fuzz_cid.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_flags"
path = "fuzz_targets/fuzz_flags.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_composable"
path = "fuzz_targets/fuzz_composable.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trade"
path = "fuzz_targets/fuzz_trade.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_appdata"
path = "fuzz_targets/fuzz_appdata.rs"
test = false
doc = false
bench = false
