[package]
name = "cow-app-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "App-data schema, validation, CID encoding and hook metadata for the CoW Protocol SDK."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.workspace.layer]
layer = 2

[lib]
doctest = false

[features]
default = []
# Enable runtime JSON schema validation via `jsonschema`.
# Disabled by default because `jsonschema` transitively pulls `getrandom`
# 0.3 which requires the `wasm_js` cfg on `wasm32-unknown-unknown`.
# Opted in from the façade `cow-rs` under a matching `schema-validation`
# feature (also a default there for native builds only).
schema-validation = ["dep:jsonschema"]

[dependencies]
alloy-primitives.workspace = true
cow-errors.workspace = true
cow-types.workspace = true
foldhash.workspace = true
jsonschema = { workspace = true, optional = true }
# NOTE (workspace-split migration debt): `ipfs.rs` uses `reqwest` directly.
# This transport concern will be moved to a dedicated `cow-ipfs` (L4)
# crate in a later phase.
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
