[package]
name = "cow-sdk-composable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CoW Protocol composable (conditional) orders: TWAP, stop-loss, GAT, Merkle multiplexer."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.workspace.layer]
layer = 5

[lib]
doctest = false

[dependencies]
alloy-primitives.workspace = true
chrono.workspace = true
cow-sdk-chains.workspace = true
cow-sdk-error.workspace = true
# NOTE (workspace-split migration debt): dep on `cow-sdk-signing` for
# the shared `UnsignedOrder` type. Will move to `cow-sdk-types` later.
cow-sdk-signing.workspace = true
cow-sdk-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
