[package]
name = "cow-composable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CoW Protocol composable (conditional) orders: TWAP, stop-loss, GAT, Merkle multiplexer."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.workspace.layer]
layer = 5

[lib]
doctest = false

[dependencies]
alloy-primitives.workspace = true
chrono.workspace = true
cow-chains.workspace = true
cow-errors.workspace = true
# NOTE (workspace-split migration debt): dep on `cow-signing` for
# the shared `UnsignedOrder` type. Will move to `cow-types` later.
cow-signing.workspace = true
cow-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
