[package]
name = "cow-contracts-abi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Layer 1 ABI bindings for CoW Protocol contracts (placeholder)."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "abi", "sdk"]
categories = ["api-bindings"]

[package.metadata.workspace.layer]
layer = 1

[lib]
doctest = false

[dependencies]
alloy-primitives.workspace = true

[lints]
workspace = true
