[package]
name = "cow-contracts-abi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Layer 1 ABI bindings for CoW Protocol contracts (placeholder)."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "abi", "sdk"]
categories = ["api-bindings"]

[package.metadata.workspace.layer]
layer = 1

[lib]
doctest = false

[dependencies]
# No deps yet — placeholder crate. Will depend on `alloy-primitives` and
# `alloy-sol-types` once the `sol!` bindings for the settlement, vault
# and composable contracts are generated here.

[lints]
workspace = true
