[package]
name = "cow-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust SDK for the CoW Protocol"

[package.metadata.cargo-udeps.ignore]
normal = ["serde-wasm-bindgen", "syn"]

[lib]
doctest = true

[features]
default = ["native", "schema-validation"]
native = ["dep:tokio", "reqwest/rustls", "tokio/rt-multi-thread"]
wasm = [
  "getrandom/js",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:serde-wasm-bindgen",
]
# Enables runtime JSON Schema validation for AppData documents via `jsonschema`.
# Disabled on wasm by default because jsonschema pulls getrandom 0.3 which
# requires a `wasm_js` cfg flag; wasm consumers can still opt in explicitly.
schema-validation = ["dep:jsonschema"]

[dependencies]
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
chrono.workspace = true
foldhash.workspace = true
futures.workspace = true
getrandom = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }
progenitor-client.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde-wasm-bindgen = { workspace = true, optional = true }
serde_json.workspace = true
# Pin minimum syn version for -Z minimal-versions compatibility
syn.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[build-dependencies]
openapiv3 = { workspace = true }
prettyplease = { workspace = true }
progenitor-impl = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn = "2"

[dev-dependencies]
graphql-parser = { workspace = true }
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true

[lints]
workspace = true
