[package]
name = "cow-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust SDK for the CoW Protocol: quoting, signing, posting and tracking orders, plus composable orders, on-chain reads and subgraph queries."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/cow-rs"

[package.metadata.cargo-udeps.ignore]
normal = ["serde-wasm-bindgen"]

# docs.rs build configuration. `all-features = true` documents the
# wasm-only modules alongside the native ones; `--cfg docsrs` lets
# `#[cfg_attr(docsrs, doc(cfg(...)))]` annotations render feature
# gates on each item.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = true

[features]
default = ["native", "schema-validation"]
native = ["dep:tokio", "reqwest/rustls", "tokio/rt-multi-thread"]
wasm = [
  "getrandom/js",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:serde-wasm-bindgen",
]
# Enables runtime JSON Schema validation for AppData documents via `jsonschema`.
# Disabled on wasm by default because jsonschema pulls getrandom 0.3 which
# requires a `wasm_js` cfg flag; wasm consumers can still opt in explicitly.
schema-validation = ["dep:jsonschema"]

[dependencies]
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
async-trait.workspace = true
chrono.workspace = true
cow-sdk-app-data.workspace = true
cow-sdk-chains.workspace = true
cow-sdk-cow-shed.workspace = true
cow-sdk-erc20.workspace = true
cow-sdk-error.workspace = true
cow-sdk-ethflow.workspace = true
cow-sdk-onchain.workspace = true
cow-sdk-orderbook.workspace = true
cow-sdk-permit.workspace = true
cow-sdk-primitives.workspace = true
cow-sdk-settlement.workspace = true
cow-sdk-signing.workspace = true
cow-sdk-subgraph.workspace = true
cow-sdk-types.workspace = true
cow-sdk-weiroll.workspace = true
foldhash.workspace = true
futures.workspace = true
getrandom = { workspace = true, optional = true }
js-sys = { version = "0.3", optional = true }
jsonschema = { workspace = true, optional = true }
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde-wasm-bindgen = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[dev-dependencies]
graphql-parser = { workspace = true }
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
wiremock.workspace = true

[lints]
workspace = true
