[package]
name = "cow-erc20"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ERC-20 and EIP-2612 calldata builders for the CoW Protocol SDK."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.workspace.layer]
layer = 2

[lib]
doctest = false

[dependencies]
alloy-primitives.workspace = true

[dev-dependencies]
cow-chains.workspace = true

[lints]
workspace = true
