[package]
name = "cow-flash-loans"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Flash loan orchestration helpers for the CoW Protocol SDK."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.workspace.layer]
layer = 5

[lib]
doctest = false

[dependencies]
alloy-primitives.workspace = true
cow-errors.workspace = true
cow-types.workspace = true

[lints]
workspace = true
