[package]
name = "cow-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust SDK for the CoW Protocol — façade crate re-exporting the cow-sdk-* workspace."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/cow-sdk"

[package.metadata.workspace.layer]
layer = 6

[lib]
doctest = false

[features]
default = []

[dependencies]
cow-app-data.workspace = true
cow-bridging.workspace = true
cow-chains.workspace = true
cow-composable.workspace = true
cow-shed.workspace = true
cow-erc20.workspace = true
cow-errors.workspace = true
cow-ethflow.workspace = true
cow-flash-loans.workspace = true
cow-http.workspace = true
cow-onchain.workspace = true
cow-orderbook.workspace = true
cow-permit.workspace = true
cow-primitives.workspace = true
cow-settlement.workspace = true
cow-signing.workspace = true
cow-subgraph.workspace = true
cow-trading.workspace = true
cow-types.workspace = true
cow-weiroll.workspace = true

[lints]
workspace = true
